# pico-c-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pico-debug.cfg  pico_setup.cmake
includes/: CMakeLists.txt  main.c
